--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "fixthecode",
     "title": "Fix The Code",
     "description": "This is a simple theme bracket",
-    "homepage": "https://github.com/raashidA/AngJs.git",
+    "homepage": "https://github.com/raashidA/FixTheCode.git",
     "version": "1.0.0",
     "author": "Raashid A. <raashida@99x.lk> (https://github.com/raashidA)",
     "license": "MIT",
