--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "fixthecode",
     "title": "FixTheCode",
-    "description": "This is a simple theme for brackets, We have used pastal colous to create this dark theme, who else have problem in seeing shining colours, this theme will help them out. ",
+    "description": "A simple theme using pastal colours with darkness.",
     "homepage": "https://github.com/raashidA/FixTheCode.git",
-    "version": "1.0.5",
+    "version": "1.1.0",
     "author": "Raashid A. <raashid@wezile.com> (https://github.com/raashidA)",
     "license": "MIT",
     "theme": {
@@ -13,3 +13,4 @@
     },
     "keywords": ["theme"]
 }
+
