--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "fixthecode",
     "title": "FixTheCode",
-    "description": "A simple theme using pastal colours with darkness.",
+    "description": "A simple theme for people who loves light colours",
     "homepage": "https://github.com/raashidA/FixTheCode.git",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "author": "Raashid A. <raashid@wezile.com> (https://github.com/raashidA)",
     "license": "MIT",
     "theme": {
