--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "fixthecode",
     "title": "FixTheCode",
     "description": "A simple theme for people who loves light colours",
-    "homepage": "https://github.com/raashidA/FixTheCode.git",
-    "version": "1.2.2",
+    "homepage": "https://github.com/99xt/FixTheCode.git",
+    "version": "3",
     "author": "Raashid A. <raashid@wezile.com> (https://github.com/raashidA)",
     "license": "MIT",
     "theme": {
